<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.monarchinitiative.squirls</groupId>
    <artifactId>Squirls</artifactId>
    <packaging>pom</packaging>
    <version>1.0.1-SNAPSHOT</version>
    <modules>
        <module>squirls-core</module>
        <module>squirls-io</module>
        <module>squirls-ingest</module>
        <module>squirls-initialize</module>
        <module>squirls-bootstrap</module>
        <module>squirls-spring-boot-autoconfigure</module>
        <module>squirls-spring-boot-starter</module>
        <module>squirls-cli</module>
    </modules>

    <name>Squirls</name>
    <description>Super-Quick Information Content and Random Forest Learning for Splice Variants</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>

        <svart.version>2.0.0-RC1</svart.version>
        <silent.genes.version>0.2.3</silent.genes.version>
        <vmvt.version>0.9.4</vmvt.version>
        <htsjdk.version>2.23.0</htsjdk.version>
        <jannovar.version>0.35</jannovar.version>
        <apiguardian.version>1.1.0</apiguardian.version>
        <picocli.version>4.5.2</picocli.version>
        <commons-csv.version>1.7</commons-csv.version>
        <spring-boot-starter.version>2.2.1.RELEASE</spring-boot-starter.version>
        <h2.version>1.4.200</h2.version>
        <junit-jupiter.version>5.6.2</junit-jupiter.version>
    </properties>

    <developers>
        <developer>
            <name>Daniel Danis</name>
            <email>daniel.danis@jax.org</email>
            <organization>The Jackson Laboratory for Genomic Medicine</organization>
            <organizationUrl>https://www.jax.org</organizationUrl>
        </developer>
        <developer>
            <name>Peter N Robinson</name>
            <email>peter.robinson@jax.org</email>
            <organization>The Jackson Laboratory for Genomic Medicine</organization>
            <organizationUrl>https://www.jax.org</organizationUrl>
        </developer>
    </developers>


    <scm>
        <connection>scm:git:git@github.com:TheJacksonLaboratory/Squirls.git</connection>
        <developerConnection>scm:git:git@github.com:TheJacksonLaboratory/Squirls.git</developerConnection>
        <url>scm:git:git@github.com:TheJacksonLaboratory/Squirls.git</url>
        <tag>v${project.version}</tag>
    </scm>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.2.1.RELEASE</version>
    </parent>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.monarchinitiative.svart</groupId>
                <artifactId>svart</artifactId>
                <version>${svart.version}</version>
            </dependency>
            <dependency>
                <groupId>org.monarchinitiative.sgenes</groupId>
                <artifactId>silent-genes-model</artifactId>
                <version>${silent.genes.version}</version>
            </dependency>
            <dependency>
                <groupId>org.monarchinitiative.sgenes</groupId>
                <artifactId>silent-genes-jannovar</artifactId>
                <version>${silent.genes.version}</version>
            </dependency>

            <!-- VMVT is a library for visualisation of variant impact on splice donor/acceptor sites in form of
        SVG images. -->
            <dependency>
                <groupId>org.monarchinitiative.vmvt</groupId>
                <artifactId>vmvt-core</artifactId>
                <version>${vmvt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apiguardian</groupId>
                <artifactId>apiguardian-api</artifactId>
                <version>${apiguardian.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.samtools</groupId>
                <artifactId>htsjdk</artifactId>
                <version>${htsjdk.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.apache.commons</groupId>
                        <artifactId>commons-compress</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>de.charite.compbio</groupId>
                <artifactId>jannovar-core</artifactId>
                <version>${jannovar.version}</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>${flyway.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
                <version>${hikaricp.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons-codec.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>${commons-csv.version}</version>
            </dependency>

            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>

            <!--                TEST                    -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring-boot-starter.version}</version>
                <scope>test</scope>
                <exclusions>
                    <exclusion>
                        <groupId>junit</groupId>
                        <artifactId>junit</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.junit.vintage</groupId>
                        <artifactId>junit-vintage-engine</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-all</artifactId>
                <version>1.3</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <!--        Libraries for testing         -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-wrapper-plugin</artifactId>
                    <version>3.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.1.0</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                        <doclint>none</doclint>
                        <quiet>true</quiet>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-wrapper-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>